// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel Matches the snapshot for component with default props 1`] = `
<DocumentFragment>
  <label
    class="label"
    for="f5dc04b0-3062-4791-8619-723e85e7f11c"
  >
    hello world
  </label>
</DocumentFragment>
`;

exports[`FormLabel Matches the snapshot for component with hasError prop 1`] = `
<DocumentFragment>
  <label
    class="label error"
    for="509e5957-d091-4187-ab10-74906de2fb06"
  >
    hello world
  </label>
</DocumentFragment>
`;

exports[`FormLabel Matches the snapshot for component with isRequired prop 1`] = `
<DocumentFragment>
  <label
    class="label"
    for="d218358c-74ac-4986-b484-275c61f24acd"
  >
    hello world
  </label>
</DocumentFragment>
`;
